--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,12 +116,13 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 
     //Dagger
-    implementation 'com.google.dagger:dagger:2.27'
-    kapt 'com.google.dagger:dagger-compiler:2.27'
-    implementation 'com.google.dagger:dagger-android:2.27'
-    implementation 'com.google.dagger:dagger-android-support:2.27'
-    kapt 'com.google.dagger:dagger-android-processor:2.27'
-    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.27'
+    def daggerVersion = "2.28.3"
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+    implementation "com.google.dagger:dagger-android:$daggerVersion"
+    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+    kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
+    kaptAndroidTest "com.google.dagger:dagger-compiler:$daggerVersion"
 
     //Logging
     implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
