--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,12 @@
         </activity>
         <activity android:name=".ui.component.details.DetailsActivity" />
 
+        <activity android:name=".ui.component.login.LoginActivity"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
+            />
+
+        <activity android:name=".ui.component.main.MainActivity" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
