--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 05 09:56:32 CET 2020
-sdk.dir=/Users/amohamed/Library/Android/sdk
+#Wed Jul 22 08:43:14 ICT 2020
+sdk.dir=/Users/vanbinh/Library/Android/sdk
